chore(website): fix scrollbar firefox

--- a/website/src/app/index.css
+++ b/website/src/app/index.css
@@ -41,6 +41,8 @@
 /* Inherited from docusaurus scrollbar stylesheets for inner containers */
 html {
     scroll-behavior: smooth;
+    scrollbar-color: var(--ifm-scrollbar-thumb-background-color) transparent;
+    scrollbar-width: thin;
 }
 
 html::-webkit-scrollbar {
